--- a/style.css
+++ b/style.css
@@ -1,339 +1,326 @@
-
-.container{
-    /* align-items:end; */
-    /* margin: 0; */
-    /* padding: 10rem; */
-}
-.remove {
-    display: none;
+body {
+    margin: 0;
 }
 
-.project {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
+.container {
+    padding: 48px 320px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 96px;
+    line-height: 112px;
 }
 
 .firstSection {
-    width: 1280px;
     height: 748px;
+    width: 100%;
     background-color: #666666;
 }
 
 .secondSection {
+    padding-top: 48px;
     display: flex;
     gap: 40px;
+
 }
 
-.secondSectionPart_1 {
+.second_part_1 {
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
-    width: 730px;
     height: 1106px;
+    width: 60%;
     background-color: #8ECDE8;
 }
 
-.secondSectionPart_2 {
-    display: grid;
-    width: 510px;
-    grid-template-columns: auto;
+.second_part_2 {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
     gap: 40px;
 }
 
-.secondSectionPart_2>div {
+.first {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.first_1 {
+    width: 100%;
+    height: 342px;
+    display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #B0E47C;
+}
+
+.second {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     height: 342px;
     background-color: #B0E47C;
 }
 
-.secondSectionPart_2_3 {
-    display: block;
-}
-
-/* - - - third Section  - - -  */
-
 .thirdSection {
-    /* margin: 96px 110px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 1280px;
-    height: 702px;
-    gap: 40px;
+    margin-top: 48px;
     background-color: #E9D945;
-}
-
-.thirdSection_1 {
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    background-color: white;
-    width: 510px;
-    height: 510px;
-}
-
-/*  - - - Fourth Section - - -  */
-.fourthSection {
-    display: flex;
     gap: 40px;
+    padding: 96px 110px;
 }
 
-.fourthSectionSubClass {
+.third_1 {
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 620px;
-    height: 324px;
-    background-color: #C4C4C4;
+    height: 510px;
+    width: 100%;
 }
 
-/*  - - - Fifth Section - - - */
-.fifthSection {
-    width: 1280px;
-    height: 106px;
+.fourthSection{
+    margin-top: 48px;
+    display: flex;
+    gap : 40px
+}
+
+.fourth_subSection{
+    background-color: #C4C4C4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 324px;
+}
+
+.fifthSection{
+    margin-top: 48px;
     background-color: #87EBB5;
+    height: 106px;
 }
 
 /*  - - - - - - - - - - - - - - - - Min Width = 960 & Max Width = 1360 - - - - - - - - - - - - - - - - - */
+@media (min-width: 1360px) and (max-width : 1780px) {
+    .container {
+        padding: 48px 120px;
+    }
+}
 
+/*  - - - - - - - - - - - - - - - - Min Width = 960 & Max Width = 1360 - - - - - - - - - - - - - - - - - */
 @media (min-width: 960px) and (max-width : 1360px) {
-    .container{
-        margin: 0;
-        padding: 24px 24px;
+    .container {
+
+        padding: 48px 60px;
     }
 
     .firstSection {
-        width: 880px;
         height: 548px;
-        background-color: #666666;
     }
 
-    .secondSectionPart_1 {
-        width: 530px;
+    .second_part_1 {
         height: 806px;
     }
 
-    .secondSectionPart_2 {
-        width: 310px;
+    .first_1 {
+        height: 242px;
     }
 
-
-    .secondSectionPart_2>div {
+    .second {
         height: 242px;
     }
 
     .thirdSection {
-        width: 880px;
-        height: 502px;
-        gap: 40px;
+        padding: 70px 90px;
     }
 
-    .thirdSection_1 {
-        width: 340px;
-        height: 340px;
+    .third_1 {
+        height: 360px;
+        width: 100%;
     }
-
-    .fourthSectionSubClass {
-        width: 420px;
+    
+    .fourth_subSection{
         height: 224px;
     }
-
-    .fifthSection {
-        width: 880px;
+    
+    .fifthSection{
+        margin-top: 48px;
+        background-color: #87EBB5;
+        height: 90px;
     }
-
 }
 
 /*  - - - - - - - - - - - - - - - - Min Width = 768 & Max Width = 960 - - - - - - - - - - - - - - - - - */
 @media (min-width: 568px) and (max-width : 960px) {
-    body {
-        padding-top: 24px;
-        padding-bottom: 24px;
-    }
-
-    .project {
-        gap: 24px;
+    .container {
+        padding: 24px;
         font-size: 24px;
+        line-height: 28px;
     }
 
     .firstSection {
-        width: 720px;
         height: 300px;
     }
 
     .secondSection {
+        padding-top: 24px;
         display: flex;
         flex-direction: column;
         gap: 24px;
+
     }
 
-    .secondSectionPart_1 {
-        width: 720px;
+    .second_part_1 {
         height: 200px;
+        width: 100%;
     }
 
-    .secondSectionPart_2 {
-        /* display: grid; */
-        width: 720px;
-        grid-template-columns: auto auto auto;
-        grid-gap: 24px;
+    .second_part_2 {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        gap: 24px;
     }
 
-    .secondSectionPart_2>div {
+    .first {
+        width: 66.6664%;
+        flex-direction: row;
+        gap: 24px;
+    }
+
+    .first_1 {
+        /* width: 100%; */
+        height: 164px;
+    }
+
+    .second {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 33.3334%;
         height: 164px;
     }
 
     .thirdSection {
-        width: 720px;
-        height: 320px;
-        gap: 24px;
+        margin-top: 24px;
+        padding: 24px 24px;
     }
 
-    .thirdSection_1 {
-        width: 324px;
+    .third_1 {
         height: 272px;
     }
 
-    .fourthSection {
-        gap: 24px;
+    .fourthSection{
+        margin-top: 24px;
+        gap : 24px
     }
-
-    .fourthSectionSubClass {
-        width: 348px;
+    
+    .fourth_subSection{
         height: 152px;
     }
-
-    .fifthSection {
-        width: 720px;
+    
+    .fifthSection{
+        margin-top: 24px;
         height: 54px;
     }
 
-
     @media (min-width: 568px) and (max-width : 767px) {
         .firstSection {
-            width: 520px;
             height: 240px;
         }
 
-        .secondSectionPart_1 {
-            width: 520px;
-            height: 200px;
+        .first_1 {
+            height: 104px;
         }
 
-        .secondSectionPart_2 {
-            width: 520px
-        }
-
-        .secondSectionPart_2>div {
-            height: 164px;
+        .second {
+            height: 104px;
         }
 
         .thirdSection {
-            width: 520px;
-            height: 220px;
+            padding: 24px 24px;
         }
 
-        .thirdSection_1 {
-            width: 224px;
-            height: 172px;
-        }
-
-        .fourthSectionSubClass {
-            width: 248px;
-            height: 102px;
-        }
-        .fifthSection {
-            width: 520px;
-            height: 54px;
+        .third_1 {
+            height: 222px;
         }
     }
 }
 
-/*  - - - - - - - - - - - - - - - - Min Width = 375 & Max Width = 568 - - - - - - - - - - - - - - - - - */
-
-@media (max-width: 568px) {
-
-    body {
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-
-    .project {
-        gap: 16px;
+@media (max-width : 568px) {
+    .container {
+        padding: 16px 16px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
         font-size: 24px;
+        line-height: 28px;
     }
 
     .firstSection {
-        width: 343px;
         height: 180px;
     }
 
     .secondSection {
-        display: flex;
+        padding-top: 16px;
         flex-direction: column;
         gap: 16px;
     }
 
-    .secondSectionPart_1 {
-        width: 343px;
+    .second_part_1 {
         height: 150px;
+        width: 100%;
     }
 
-    .secondSectionPart_2 {
-        display: grid;
-        width: 343px;
-        grid-template-columns: auto auto;
+    .second_part_2 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
         gap: 16px;
     }
 
-    .secondSectionPart_2>div {
-        align-items: center;
-        justify-content: center;
-        display: grid;
-        height: 120px;
+    .first {
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
     }
 
-    .secondSectionPart_2_3 {
-        display: grid;
-        grid-column-start: 1;
-        grid-column-end: 3;
+    .first_1 {
+        width: 50%;
+        height: 120px;
+    }
+    .second {
+        height: 120px;
     }
 
     .thirdSection {
-        display: flex;
-        flex-direction: column;
-        width: 343px;
-        height: 368px;
-        gap: 16px;
-    }
-
-    .thirdSection_1 {
-        width: 311px;
-        height: 160px;
-    }
-
-    .fourthSection {
+        margin-top: 16px;
         display: flex;
         flex-direction: column;
         gap: 16px;
+        padding: 16px 16px;
+    }
+    
+    .third_1 {
+        height: 168px;
     }
 
-    .fourthSectionSubClass {
-        width: 343px;
+    .fourthSection{
+        flex-direction: column;
+        margin-top: 16px;
+        gap : 16px
+    }
+    
+    .fourth_subSection{
         height: 120px;
     }
-
-    .fifthSection {
-        width: 343px;
+    
+    .fifthSection{
+        margin-top: 16px;
         height: 52px;
     }
 }
